--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,19 @@
-# Database (NeonDB)
+# Database (NeonDB or any PostgreSQL)
 DATABASE_URL="postgresql://user:password@host.neon.tech/dbname?sslmode=require"
 
 # NextAuth
 AUTH_SECRET="generate-a-secret-with: openssl rand -base64 32"
-NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_URL="https://yourdomain.com"
 
 # Cloudinary
 CLOUDINARY_CLOUD_NAME="your-cloud-name"
 CLOUDINARY_API_KEY="your-api-key"
 CLOUDINARY_API_SECRET="your-api-secret"
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="your-cloud-name"
-NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET="orits-fashion"
+NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET="orits_fashion"
+
+# Resend (email notifications) — get key at resend.com
+RESEND_API_KEY="re_xxxxxxxxxxxxxxxxxxxxxxxxxx"
+
+# Site URL (used for OG tags, sitemap, robots.txt)
+NEXT_PUBLIC_SITE_URL="https://yourdomain.com"
